@@ -92,6 +92,11 @@
 	    isabelle.jedit.Isabelle.toggle_node_required(view);
 	  </CODE>
 	</ACTION>
+	<ACTION NAME="isabelle.reset-font-size">
+	  <CODE>
+	    isabelle.jedit.Isabelle.reset_font_size(view);
+	  </CODE>
+	</ACTION>
 	<ACTION NAME="isabelle.increase-font-size">
 	  <CODE>
 	    isabelle.jedit.Isabelle.increase_font_size(view);
